--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>    
-    <h1>Welcome to My Game</h1>  
+    <h1>Welcome to My Game</h1>
+    <h2 id="score">0</h2>  
     <script src="script.js"></script>
   </body>
 </html>
